Consider function declarations un-executable
Rather than consider them executable, and try to figure out when/if
they're executed, always consider them un-executable. Then the lack of
traced execution doesn't impact coverage negatively. If a shell trace
doesn't consider them executed, then I think it's fair to say they're
not "executable", right?

Fixes #1.

--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,7 @@ library:
   - Coverish.Format
   - Coverish.Options
   - Coverish.SourceFile
+  - Coverish.SourceFile.LineParser
   - Coverish.Summary
   - Coverish.Trace
   - Coverish.Trace.Lookup
