--- a/package.yaml
+++ b/package.yaml
@@ -42,6 +42,27 @@ executables:
     - base
     - coverish
     - text
+  coverish-exec:
+    main: Exec.hs
+    source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - base
+    - containers
+    - process
+    - temporary
+  coverish-eval:
+    main: Eval.hs
+    source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - base
 tests:
   coverish-test:
     main: Spec.hs
