--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ library:
   - Coverish
   other-modules:
   - Coverish.Format
+  - Coverish.Format.Color
   - Coverish.Options
   - Coverish.SourceFile
   - Coverish.SourceFile.LineParser
