--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: rwe/actions-hlint-setup@v1
       - uses: rwe/actions-hlint-run@v2
+        with:
+          fail-on: warning
 
   # TODO binaries
