--- a/stack.yaml
+++ b/stack.yaml
@@ -1,1 +1,5 @@
 resolver: lts-18.18
+extra-deps:
+  # for weeder
+  - dhall-1.40.2@sha256:db1d5f81912de498eeb8cf4535aebd76c695c016a8c5710970b61e83f3d345cb,34786
+  - generic-lens-2.2.0.0@sha256:4008a39f464e377130346e46062e2ac1211f9d2e256bbb1857216e889c7196be,3867
