--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: rwe/actions-hlint-setup@v1
+      - run: |
+          curl -o .hlint.yaml https://raw.githubusercontent.com/pbrisbin/dotfiles/master/hlint.yaml
       - uses: rwe/actions-hlint-run@v2
         with:
           fail-on: warning
