--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,58 @@
 name: coverish
 version: 0.2.0.0
-author: Patrick Brisbin <pbrisbin@gmail.com>
-license: MIT
 github: pbrisbin/coverish
+license: MIT
+author: Patrick Brisbin <pbrisbin@gmail.com>
+maintainer: pbrisbin@gmail.com
+copyright: 2022 Patrick Brisbin
 
-extra-source-files:
+extra-doc-files:
   - README.md
+  - CHANGELOG.md
+
+description: Please see <https://github.com/freckle/stackctl#readme>
 
 dependencies:
-  - base >=4.7 && <5
+  - base >= 4 && < 5
+
+ghc-options:
+  - -fwrite-ide-info
+  - -Weverything
+  - -Wno-all-missed-specialisations
+  - -Wno-missing-import-lists
+  - -Wno-missing-kind-signatures
+  - -Wno-missing-local-signatures
+  - -Wno-missing-safe-haskell-mode
+  - -Wno-prepositive-qualified-module
+  - -Wno-unsafe
+  - -optP-Wno-nonportable-include-path # workaround [Filename case on macOS · Issue #4739 · haskell/cabal](https://github.com/haskell/cabal/issues/4739)
+
+default-extensions:
+  - BangPatterns
+  - DataKinds
+  - DeriveAnyClass
+  - DeriveFoldable
+  - DeriveFunctor
+  - DeriveGeneric
+  - DeriveLift
+  - DeriveTraversable
+  - DerivingStrategies
+  - DerivingVia
+  - FlexibleContexts
+  - FlexibleInstances
+  - GADTs
+  - GeneralizedNewtypeDeriving
+  - LambdaCase
+  - MultiParamTypeClasses
+  - NoImplicitPrelude
+  - NoMonomorphismRestriction
+  - OverloadedStrings
+  - RankNTypes
+  - RecordWildCards
+  - ScopedTypeVariables
+  - StandaloneDeriving
+  - TypeApplications
+  - TypeFamilies
 
 library:
   source-dirs: src
@@ -34,7 +78,6 @@ executables:
       - -with-rtsopts=-N
     dependencies:
       - coverish
-      - text
 
   coverish-exec:
     main: Main.hs
@@ -57,15 +100,10 @@ executables:
       - -with-rtsopts=-N
 
 tests:
-  hspec:
+  spec:
     main: Spec.hs
     source-dirs: test
-    ghc-options:
-      - -threaded
-      - -rtsopts
-      - -with-rtsopts=-N
     dependencies:
-      - QuickCheck
       - coverish
       - directory
       - filepath
